Updates to Flask app, fixed spacing issue on some images, need to change height scaling for some images, added generator page content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -149,7 +149,7 @@ p {
 
 /* @TODO figure out how to add shadow to indicators */
 #carouselIndicator {
-    text-shadow: 1px 1px 2px #1663c7, 0 0 1em #1663c7, 0 0 0.2em #1663c7;
+    color: #1663c7!important;
 }
 
 #carousel-image {
@@ -172,6 +172,13 @@ p {
     text-shadow: 1px 1px 2px #1663c7, 0 0 1em #1663c7, 0 0 0.2em #1663c7;
 }
 
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%231663c7' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%231663c7' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
 
 /* SECTIONS */
 #imgHeader {
@@ -206,7 +213,7 @@ h1 {
 
 #imgContent {
     display: block;
-    object-fit: scale-down;
+    object-fit: contain;
     width: 80%;
     align-content: center;
     margin-right: auto;
@@ -269,6 +276,16 @@ figcaption {
 
 #thumbCaption {
     margin-left: 0px!important;
+    text-align: left;
+}
+
+#generatorCaption {
+    margin-left: 0px!important;
+    text-align: right;
+}
+
+#timelapseGen {
+    align-content: center;
 }
 
 #refs {
